--- a/view/home.html
+++ b/view/home.html
@@ -11,173 +11,10 @@
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <link rel="stylesheet" href="style.css">
+
     <title>Account | API</title>
-    <style>
-        @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
-        .content-3-1 .btn:focus,
-        .content-3-1 .btn:active {
-            outline: none !important;
-        }
-
-        .content-3-1 {
-            padding: 5rem 2rem;
-        }
-
-        .content-3-1 .img-hero {
-            width: 100%;
-            margin-bottom: 3rem;
-        }
-
-        .content-3-1 .right-column {
-            width: 100%;
-        }
-
-        .content-3-1 .title-text {
-            font: 600 1.875rem/2.25rem Poppins, sans-serif;
-            margin-bottom: 2.5rem;
-            letter-spacing: -0.025em;
-            color: #121212;
-        }
-
-        .content-3-1 .title-caption {
-            font: 500 1.5rem/2rem Poppins, sans-serif;
-            margin-bottom: 1.25rem;
-            color: #121212;
-        }
-
-        .content-3-1 .circle {
-            font: 500 1.25rem/1.75rem Poppins, sans-serif;
-            height: 3rem;
-            width: 3rem;
-            margin-bottom: 1.25rem;
-            border-radius: 9999px;
-            background-color: #ffbf56;
-        }
-
-        .content-3-1 .text-caption {
-            font: 400 1rem/1.75rem Poppins, sans-serif;
-            letter-spacing: 0.025em;
-            color: #565656;
-        }
-
-        .content-3-1 .btn-learn {
-            font: 600 1rem/1.5rem Poppins, sans-serif;
-            padding: 1rem 2.5rem;
-            background-color: #ffbf56;
-            transition: 0.3s;
-            letter-spacing: 0.025em;
-            border-radius: 0.75rem;
-        }
-
-        .content-3-1 .btn-learn:hover {
-            background-color: #ffefd5;
-            transition: 0.3s;
-        }
-
-        @media (min-width: 768px) {
-            .content-3-1 .title-text {
-                font: 600 2.25rem/2.5rem Poppins, sans-serif;
-            }
-        }
-
-        @media (min-width: 992px) {
-            .content-3-1 .img-hero {
-                width: 50%;
-                margin-bottom: 0;
-            }
-
-            .content-3-1 .right-column {
-                width: 50%;
-            }
-
-            .content-3-1 .circle {
-                margin-right: 1.25rem;
-                margin-bottom: 0;
-            }
-        }
-
-        * {
-            box-sizing: border-box;
-        }
-
-        /* The browser window */
-        .container {
-            border: 3px solid #f1f1f1;
-            border-top-left-radius: 4px;
-            border-top-right-radius: 4px;
-        }
-
-        /* Container for columns and the top "toolbar" */
-        .row {
-            padding: 10px;
-            background: #ffbf56;
-            border-top-left-radius: 4px;
-            border-top-right-radius: 4px;
-        }
-
-        /* Create three unequal columns that floats next to each other */
-        .column {
-            float: left;
-        }
-
-        .left {
-            width: 15%;
-        }
-
-        .right {
-            width: 10%;
-        }
-
-        .middle {
-            width: 75%;
-        }
-
-        /* Clear floats after the columns */
-        .row:after {
-            content: "";
-            display: table;
-            clear: both;
-        }
-
-        /* Three dots */
-        .dot {
-            margin-top: 4px;
-            height: 12px;
-            width: 12px;
-            background-color: #bbb;
-            border-radius: 50%;
-            display: inline-block;
-        }
-
-        /* Three bars (hamburger menu) */
-        .bar {
-            width: 17px;
-            height: 3px;
-            background-color: white;
-            margin: 3px 0;
-            display: block;
-        }
-
-        /* Page content */
-        .content {
-            padding: 10px;
-        }
-
-        body {
-            overflow: hidden;
-        }
-
-        .orange {
-            background-color: #ffbf56;
-            color: white;
-        }
-
-        .orange-hov:hover {
-            color: white;
-            background-color: #ffefd5;
-        }
-    </style>
 </head>
 
 <body>
@@ -248,28 +85,26 @@
                             </p>
                         </li>
                     </ul>
-                    <!-- <button type="button" class="btn btn-learn text-white" data-toggle="modal"
-                        data-target="#exampleModal" data-whatever="@mdo">Learn More</button> -->
+                    <button type="button" class="btn btn-learn text-white" data-toggle="modal"
+                        data-target="#feedbackmodal" data-whatever="@mdo">Learn More</button>
                 </div>
             </div>
         </div>
     </section>
 
 
-    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+    <div class="modal fade" id="feedbackmodal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
         aria-hidden="true">
         <div class="modal-dialog" role="document" style="margin-top: 7%;">
             <div class="modal-content">
                 <div class="modal-header orange">
                     <h5 class="modal-title" id="exampleModalLabel">Add Feedback</h5>
-
-
                 </div>
                 <div class="modal-body">
                     <form>
                         <div class="form-group">
                             <label for="recipient-name" class="col-form-label" style="color: #c98b27;">Sender :</label>
-                            <input type="text" class="form-control" id="recipient-name" placeholder="Your Name">
+                            <input type="text" class="form-control" id="sender-name" placeholder="Your Name">
                         </div>
                         <div class="form-group">
                             <label for="message-text" class="col-form-label" style="color: #c98b27;">Message :</label>
@@ -279,36 +114,67 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    <button type="button" class="btn orange orange-hov">Send message</button>
+                    <button type="button" class="btn orange orange-hov" id="send">Send message</button>
                 </div>
             </div>
         </div>
     </div>
 
+    <!-- The actual snackbar -->
+    <div id="snackbar"></div>
 
     <script>
-        $('#exampleModal').on('show.bs.modal', function (event) {
-            var button = $(event.relatedTarget) // Button that triggered the modal
-            var recipient = button.data('whatever') // Extract info from data-* attributes
-            // If necessary, you could initiate an AJAX request here (and then do the updating in a callback).
-            // Update the modal's content. We'll use jQuery here, but you could use a data binding library or other methods instead.
-            var modal = $(this)
-            modal.find('.modal-title').text('New message to ' + recipient)
-            modal.find('.modal-body input').val(recipient)
+        const button = document.getElementById("send");
+        button.addEventListener("click", function () {
+            var sender = document.getElementById("sender-name").value;
+            var text = document.getElementById("message-text").value;
+
+            var link = "https://neptune-account.herokuapp.com/feedback";
+
+            // Converting JSON data to string
+            var data = JSON.stringify({ "name": sender, "text": text });
+
+            $.ajax({
+                url: 'https://neptune-account.herokuapp.com/feedback',
+                type: 'POST',
+                data: data,
+                dataType: 'json',
+                success: function () {
+                    $('#feedbackmodal').modal('toggle');
+                    // Get the snackbar DIV
+                    var x = document.getElementById("snackbar");
+                    var status = "Success Sending Feedback";
+                    x.append(status);
+                        // Add the "show" class to DIV
+                    x.className = "show";
+                    // After 3 seconds, remove the show class from DIV
+                    setTimeout(function () { x.className = x.className.replace("show", ""); }, 3000);
+                },
+                error: function () {
+                    $('#feedbackmodal').modal('toggle');
+                    // Get the snackbar DIV
+                    var x = document.getElementById("snackbar");
+                    var status = "Failed Sending Feedback";
+                    x.append(status);
+                        // Add the "show" class to DIV
+                    x.className = "show";
+                    // After 3 seconds, remove the show class from DIV
+                    setTimeout(function () { x.className = x.className.replace("show", ""); }, 3000);
+                }
+            });
         });
     </script>
 
 
-
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-        crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.js"
+        integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
         integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
         crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
