--- a/view/home.html
+++ b/view/home.html
@@ -335,7 +335,7 @@
                         </li>
                     </ul>
                     <button type="button" class="btn btn-learn text-white" data-toggle="modal"
-                        data-target="#feedbackmodal" data-whatever="@mdo">Learn More</button>
+                        data-target="#feedbackmodal" data-whatever="@mdo">Send Feedback !</button>
                 </div>
             </div>
         </div>
