--- a/view/home.html
+++ b/view/home.html
@@ -406,11 +406,10 @@
         });
 
         function showfeedback() {
+            $('#fedback').html("");
             var link = "https://neptune-account.herokuapp.com/feedback";
             $.getJSON(link, function (data) {
-                console.log(data);
                 for (i = 0; i < data.length; i++) {
-
                     $('#fedback').append(
                         `
                         <button type="button" class="btn btn-secondary btn-lg" style="margin-top:20px;">` + data[i].text + `</button>
@@ -418,6 +417,27 @@
                     );
                 }
             });
+            return "Ok Please Wait";
+        };
+
+        function showuser() {
+            $('#fedback').html("");
+            var link = "https://neptune-account.herokuapp.com/user";
+            $.getJSON(link, function (data) {
+                for (i = 0; i < data.length; i++) {
+                    $('#fedback').append(
+                        `
+                        <button type="button" class="btn btn-secondary btn-lg" style="margin-top:20px;">` + data[i].name + `</button>
+                       `
+                    );
+                }
+            });
+            return "Ok Please Wait";
+        };
+
+        function clear() {
+            $('#fedback').html("");
+            return "Ok Please Wait";
         };
     </script>
 
